Update negative margin to prevent content shift

--- a/packages/usa-form-group/src/styles/_usa-form-group.scss
+++ b/packages/usa-form-group/src/styles/_usa-form-group.scss
@@ -16,6 +16,6 @@
   position: relative;
 
   @include at-media("desktop") {
-    margin-left: units(-1);
+    margin-left: -10px;
   }
 }
